--- a/src/Index.html
+++ b/src/Index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Bienvenido a Info-Arch</h1>
     <br>
-    <h3>Integrantes:</h3>
+    <h3>Integrantes del grupo:</h3>
     <ol>
         <li>David Alvarez</li>
         <li>Danner Galvarro</li>
