Titulo de Bienvenida modificado

--- a/src/Index.html
+++ b/src/Index.html
@@ -7,7 +7,7 @@
     <title>Info-Arch</title>
 </head>
 <body>
-    <h1>Bienvenido a Info-Arch</h1>
+    <h1>Bienvenido a la Empresa Info-Arch</h1>
     <br>
     <h3>Integrantes del grupo:</h3>
     <ol>
