--- a/src/Index.html
+++ b/src/Index.html
@@ -14,6 +14,9 @@
         <li>David Alvarez</li>
         <li>Danner Galvarro</li>
         <li>Bismarck Franco</li>
+        <li>Rodrigo Roman</li>
+        <li>Eider</li>
+        <li>Sebastian</li>
     </ol>
 </body>
 </html>
